add Block UI Styler info

--- a/config/content.htm
+++ b/config/content.htm
@@ -527,7 +527,13 @@ var winkVideoData_gear_design = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>除了使用上述 NX UGOpen C 的 gear.c 協助正齒輪的設計繪圖外, 也可以利用 NX12 版之後系統自帶的 \UGOPEN\SNAP\examples\More Examples\Gear\Gear.vb.</p><h1>Solvespace</h1>
+<p>除了使用上述 NX UGOpen C 的 gear.c 協助正齒輪的設計繪圖外, 也可以利用 NX12 版之後系統自帶的 \UGOPEN\SNAP\examples\More Examples\Gear\Gear.vb.</p><h3>Block UI Styler</h3>
+<p>Application -&gt; Gateway -&gt; More -&gt; Block UI Styler</p>
+<p><a href="/downloads/NXOpen_Getting_Started_2019.pdf">NXOpen_Getting_Started_2019.pdf</a> 中 <a href="https://mde.tw/cd2022_guide/downloads/NXOpen_Getting_Started_2019.pdf#[{%22num%22%3A253%2C%22gen%22%3A0}%2C{%22name%22%3A%22XYZ%22}%2C62%2C787%2C0]">Chapter 14: Block-Based Dialogs</a> 說明如何利用 Block UI Styler 應用程式建立 API 程式所需要的表單.</p>
+<p><a href="https://docs.sw.siemens.com/en-US/product/209349590/doc/PL20200507135732916.blockstyler/html/intro_int_ov_bl">NX1953 Block UI Styler Documentation</a></p>
+<h4>Tutorial:</h4>
+<p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=qeDgmwz-xQU">https://www.youtube.com/watch?v=qeDgmwz-xQU</a> </p>
+<p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=Qo_A2lJEn0c">https://www.youtube.com/watch?v=Qo_A2lJEn0c</a> </p><h1>Solvespace</h1>
 <p>根據 <a href="https://mde.tw/cad2021/content/Compile%20Solvespace.html">https://mde.tw/cad2021/content/Compile%20Solvespace.html</a> 中的說明, 可以利用 <a href="https://drive.google.com/file/d/16L08jH3ZtoMeeGWBJrP9DuIk-cby_Wqw/view?usp=sharing">compile_copsim_for_cd2022.7z</a> (file size: 5 GB, extracted size: 17.3 GB), 完成編譯.</p>
 <p>自行編譯 Solvespace 的目的是希望透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 與 <a href="https://www.coppeliarobotics.com/helpFiles/en/importExport.htm">https://www.coppeliarobotics.com/helpFiles/en/importExport.htm</a> 的資訊, 自行在 Solvespace 中將組立檔案直接轉入 Coppeliasim 的場景檔案. 其中牽涉如何將 Solvespace 組立件中的零件檔案進行分割後, 以 <a href="https://en.wikipedia.org/wiki/STL">STL</a>、<a href="http://wiki.ros.org/urdf">URDF</a> 或 <a href="http://sdformat.org/">SDF</a> 格式直接轉入 Coppeliasim.</p><h1>NX</h1>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/">https://www.plm.automation.siemens.com/global/en/products/nx/</a></p>
