--- a/content/Block UI Styler.html
+++ b/content/Block UI Styler.html
@@ -139,32 +139,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Portable NX1980 << <a href='Portable NX1980.html'>Previous</a> <a href='NXOpen.html'>Next</a> >> NXOpen<br /><h1>NX1980_setup</h1>
-<p>以下影片說明如何設定 Journal 存檔格式, 關閉 Product Execellence Program, 並查驗版本與授權使用單位:</p>
-<p><a href="./../downloads/w5_nx_api/w5_nx_api.txt">w5_nx_api.txt</a></p>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 10,
-  buttonFrameLength: 5,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
-<source src="./../downloads/w5_nx_api/w5_nx_api.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
-<div class="winkVideoControlBarProgressRightClass"></div>
-<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<div class="winkVideoControlBarProgressThumbClass"></div>
-</div>
-<div class="winkVideoPlayOverlayClass"></div>
-</div><br />Portable NX1980 << <a href='Portable NX1980.html'>Previous</a> <a href='NXOpen.html'>Next</a> >> NXOpen</div>
+    <div id="tipue_search_content">Spur Gear << <a href='Spur Gear.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace<br /><h1>Block UI Styler</h1>
+<p>Application -&gt; Gateway -&gt; More -&gt; Block UI Styler</p>
+<p><a href="./../downloads/NXOpen_Getting_Started_2019.pdf">NXOpen_Getting_Started_2019.pdf</a> 中 <a href="https://mde.tw/cd2022_guide/downloads/NXOpen_Getting_Started_2019.pdf#[{%22num%22%3A253%2C%22gen%22%3A0}%2C{%22name%22%3A%22XYZ%22}%2C62%2C787%2C0]">Chapter 14: Block-Based Dialogs</a> 說明如何利用 Block UI Styler 應用程式建立 API 程式所需要的表單.</p>
+<p><a href="https://docs.sw.siemens.com/en-US/product/209349590/doc/PL20200507135732916.blockstyler/html/intro_int_ov_bl">NX1953 Block UI Styler Documentation</a></p>
+<h4>Tutorial:</h4>
+<p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=qeDgmwz-xQU">https://www.youtube.com/watch?v=qeDgmwz-xQU</a> </p>
+<p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=Qo_A2lJEn0c">https://www.youtube.com/watch?v=Qo_A2lJEn0c</a> </p><br />Spur Gear << <a href='Spur Gear.html'>Previous</a> <a href='Solvespace.html'>Next</a> >> Solvespace</div>
         
     <!-- footer -->
       <div class="container">
