加入 Brython 與 Flask ajax 應用範例

--- a/content/Python API.html
+++ b/content/Python API.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a></li></li></ul></ul><li><a href='Onshape.html'>Onshape</a><li><a href='Coppeliasim.html'>Coppeliasim</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a><li><a href='AJAX.html'>AJAX</a></li></li></ul></ul><li><a href='Onshape.html'>Onshape</a><li><a href='Coppeliasim.html'>Coppeliasim</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,9 +139,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Research << <a href='Research.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape<br /><h1>Python API</h1>
-<p>設定 NX Journal 存為 Python: File -&gt; Preferences -&gt; User Interface -&gt; Tools -&gt; Journal 將 Jpurnal Language 設為 Python.</p>
-<p>接著將 Quick Access Toolbar 中的 Menu 功能表開啟. 然後透過 Menu -&gt; Tools -&gt; Journal 選擇 Record, 將 Journal 檔案存至特定目錄區後, 開始錄製操作過程.</p>
+    <div id="tipue_search_content">Research << <a href='Research.html'>Previous</a> <a href='AJAX.html'>Next</a> >> AJAX<br /><h1>Python API</h1>
+<p>設定 NX Journal 存為 Python 的步驟為:</p>
+<p style="padding-left: 30px;">File -&gt; Preferences -&gt; User Interface -&gt; Tools -&gt; Journal 將 Jpurnal Language 設為 Python.</p>
+<p>接著將 Quick Access Toolbar 中的 Menu 功能表開啟. 然後透過 Menu -&gt; Tools -&gt; Journal 選擇 Record, 將 Journal 檔案存至特定目錄區後, 開始錄製操作過程. 選擇 Stop 可以將操作過程存為 Python 程式. 選擇 Play 可以播放已經存檔案的 Python 程式. 選擇 Edit 則可編輯 Python API 程式.</p>
 <p>Create New Model Python API 程式:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import NXOpen
 
@@ -193,7 +194,9 @@ def main():
 if __name__ == '__main__':
     main()
 </pre>
-<p>Tools -&gt; Expressions 可以列出所有 Expressions</p><br />Research << <a href='Research.html'>Previous</a> <a href='Onshape.html'>Next</a> >> Onshape</div>
+<p>Tools -&gt; Expressions 可以列出所有 Expressions</p>
+<p>在零件繪製過程若將關鍵尺寸以 Expressions 變數命名後, 透過 Python API 進行操控, 並利用 Flask 讓該 Python 程式網際化, 之後再交由前端的 Brython 表單輸入所需要的零組件變數值, 由 AJAX 傳至後端將該零組件轉為 STL 或 STEP 格式後提供下載. 且將客製化後之零組件 PMI 資訊直接顯示在 Brython 前端. 將有助於提升各階段協同產品設計流程效益.</p>
+<br />Research << <a href='Research.html'>Previous</a> <a href='AJAX.html'>Next</a> >> AJAX</div>
         
     <!-- footer -->
       <div class="container">
