--- a/config/content.htm
+++ b/config/content.htm
@@ -955,8 +955,9 @@ for dim in workPart.Dimensions:</pre>
 <p style="padding-left: 60px;"><a href="https://ieeexplore.ieee.org/document/6052107">The Discussion of Spur Gear Library System Based on UG/Open</a></p>
 <p style="padding-left: 60px;">The dlx file must be placed in one of the following locations:<br/><br/>1. From where NX session is launched<br/><br/>2. $UGII_USER_DIR/application<br/><br/>3. For released applications, using UGII_CUSTOM_DIRECTORY_FILE is highly<br/><br/>recommended. This variable is set to a full directory path to a file</p>
 <p></p><h3>Python API</h3>
-<p>設定 NX Journal 存為 Python: File -&gt; Preferences -&gt; User Interface -&gt; Tools -&gt; Journal 將 Jpurnal Language 設為 Python.</p>
-<p>接著將 Quick Access Toolbar 中的 Menu 功能表開啟. 然後透過 Menu -&gt; Tools -&gt; Journal 選擇 Record, 將 Journal 檔案存至特定目錄區後, 開始錄製操作過程.</p>
+<p>設定 NX Journal 存為 Python 的步驟為:</p>
+<p style="padding-left: 30px;">File -&gt; Preferences -&gt; User Interface -&gt; Tools -&gt; Journal 將 Jpurnal Language 設為 Python.</p>
+<p>接著將 Quick Access Toolbar 中的 Menu 功能表開啟. 然後透過 Menu -&gt; Tools -&gt; Journal 選擇 Record, 將 Journal 檔案存至特定目錄區後, 開始錄製操作過程. 選擇 Stop 可以將操作過程存為 Python 程式. 選擇 Play 可以播放已經存檔案的 Python 程式. 選擇 Edit 則可編輯 Python API 程式.</p>
 <p>Create New Model Python API 程式:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import NXOpen
 
@@ -1008,7 +1009,92 @@ def main():
 if __name__ == '__main__':
     main()
 </pre>
-<p>Tools -&gt; Expressions 可以列出所有 Expressions</p><h1>Onshape</h1>
+<p>Tools -&gt; Expressions 可以列出所有 Expressions</p>
+<p>在零件繪製過程若將關鍵尺寸以 Expressions 變數命名後, 透過 Python API 進行操控, 並利用 Flask 讓該 Python 程式網際化, 之後再交由前端的 Brython 表單輸入所需要的零組件變數值, 由 AJAX 傳至後端將該零組件轉為 STL 或 STEP 格式後提供下載. 且將客製化後之零組件 PMI 資訊直接顯示在 Brython 前端. 將有助於提升各階段協同產品設計流程效益.</p>
+<h3>AJAX</h3>
+<p>可以將下列 Server 端的 Flask 程式透過 NXOpen Python API 與 NX12、NX1980 或 NX2008 相連, 然後將 uarm 機械手臂所需要的零組件參數, 由 Brython 端輸入, 執行後的結果再傳回網際前端應用.</p>
+<p>Client 端的 Brython:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從 browser 導入 document
+from browser import document
+# 使用者可以透過 window 當作介面使用其他 Javascript 功能
+from browser import html, window, ajax
+# https://www.brython.info/static_doc/en/ajax.html
+
+brython_div = document["brython_div"]
+output = html.DIV("output")
+output.id = "output"
+brython_div &lt;= output
+
+# 插入輸入表單
+form = html.FORM()
+A = html.INPUT(type="text", id="A", size="5", name="a", value="2")
+B = html.INPUT(type="text", id="B", size="5", name="b", value="3")
+button = html.BUTTON("calculate", id="calculate")
+form &lt;= "a: " + A + html.BR()
+form &lt;= "b: " + B + html.BR()
+brython_div &lt;= form + button + html.BR()
+
+def log(*args):
+    output = document["output"]
+    output.html += ', '.join(str(arg) for arg in args)
+
+def show(req):
+    document["output"].clear()
+    log(req.text)
+    
+def on_complete(req):
+    document["output"].clear()
+    if req.status==200 or req.status==0:
+        document["output"] &lt;= req.text
+    else:
+        document["output"] &lt;= "error " + req.text
+         
+def post(ev):  
+    # a 為 id="A" 輸入欄位中所輸入的值
+    a = document['A'].value
+    # b 為 id="B" 輸入欄位中所輸入的值        
+    b = document['B'].value
+    url = "http://localhost:9448/add_numbers"
+    ajax.post(url,
+             oncomplete=show,
+             data={"a": a, "b":b})
+    # req 從 ajax 模組中的 ajax 類別建立案例, 為一個 ajax 物件        
+    '''
+    req = ajax.Ajax()
+    # ajax 物件中的 bind 方法, 第一個輸入變數為 evt, 'complete' 表示 ajax 從伺服器取值完成後, 執行 on_complete 函式
+    req.bind('complete', on_complete)
+    req.open('POST', url, True)
+    req.set_header('content-type','application/x-www-form-urlencoded')
+    req.send({"a": a, "b":b}) 
+    '''
+ 
+# 使用者按下 id="calculate" 按鈕, 將會執行上述 get("/add_numbers") 函式
+document['calculate'].bind('click', post)</pre>
+<p>Server 端的 Flask:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from flask import Flask, render_template, request, jsonify
+# 必須導入 CORS
+from flask_cors import CORS
+ 
+# Initialize the Flask application
+app = Flask(__name__)
+CORS(app, support_credentials=False)
+ 
+@app.route('/')
+def index():
+    #return render_template('index.html')
+    return "index"
+ 
+@app.route('/add_numbers', methods=['POST'])
+def add_numbers():
+    a = request.form.get('a', 0, type=int)
+    b = request.form.get('b', 0, type=int)
+    #return jsonify(result = a+b)
+    # 必須傳回字串?
+    return str(a+b)
+ 
+if __name__ == '__main__':
+    app.run(debug=True, port=9448) #, ssl_context="adhoc")</pre>
+<p></p><h1>Onshape</h1>
 <p>以 <a href="https://cad.onshape.com/documents/3c81d3f7fc38f5da16eef9ed/w/f6d4616f188bc9425608890c/e/08936ec436f9e9668efeaefd?renderMode=0&amp;uiState=6254c8ae6d93450dec4bb2b2">Onshape 中的 uArm robot</a>. (並未自行繪製零組件而是從 <a href="/downloads/cd2022_uarm/UTF8_uArmSwiftPro_UP1300_3D.STEP">uArmSwiftPro_UP1300_3D.STEP</a> import)</p><h1>Coppeliasim</h1>
 <p>根據 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> 中有關 simple format 的說明, 可直接將 uArm 機械手臂在 NX 中的零組件, 透過 NXOpen Python API 的程式轉為 CoppeliaSim 的 Scene hierarchy 組合狀態.</p>
 <p>如此便將 uArm 機械手臂各零組件參數化, 然後直接在 Brython 前端介面設定 uArm 機械手臂的設計參數, 經由 AJAX 將參數送至後端 Flask + NXOpen Python API 伺服器, 產生 uArm 機械手臂組合場景後, 再透過 <a href="https://www.coppeliarobotics.com/helpFiles/en/legacyRemoteApiOverview.htm">Legacy Python remote API</a> 或 <a href="https://www.coppeliarobotics.com/helpFiles/en/zmqRemoteApiOverview.htm">ZeroMQ Python remote API</a> 控制 uArm 機械手臂 (或利用 <a href="https://www.ensta-bretagne.fr/zerr/dokuwiki/doku.php?id=vrep:socket-com-with-robot">Socket 傳遞控制參數</a>), 並以客製化 image sensor 的<a href="https://forum.coppeliarobotics.com/viewtopic.php?t=3457">影像串流</a>從 Flask server 送至各協同成員的瀏覽器, 或採 <a href="https://www.coppeliarobotics.com/helpFiles/en/externalFrontEnd.htm">Web browser based frontend</a> 方式呈現控制流程.</p>
