重新整理頁面標題

--- a/content/w7 任務.html
+++ b/content/w7 任務.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a><li><a href='AJAX.html'>AJAX</a></li></li></ul></ul><li><a href='Onshape.html'>Onshape</a><li><a href='Coppeliasim.html'>Coppeliasim</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a><li><a href='AJAX.html'>AJAX</a></li></li></ul></ul><li class='has-children'><a href='Applications.html'>Applications</a><ul class='dropdown'><li><a href='Coppeliasim.html'>Coppeliasim</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -162,6 +162,7 @@ img.add_border {
 <li>各大組將所有完成的程式碼、編譯結果、MCAD 零組件檔案以及場景模擬檔案壓縮為 .7z (以 2ag1 大分組為例, 檔案名稱設為w7_pap_cd2022ag1.7z) 後, 送到組長的 @gm 帳號下的 <a href="https://www.microsoft.com/zh-tw/education/products/office">OneDrive</a> 共享區, 設定為只有 @gm 帳號登入者可以下載的共用權限後, 將連結發布在大組的 Pelican 網誌中.</li>
 <li>各大組以程式方法執行上述任務的量化查驗後, 結合組員自評與互評流程後, 將各組員的評量結果存為 w7_cd2022ag1_evaluation.txt (以 2ag1 為例), 採允許各組組員與 yen@gm 共享下載進行設定.</li>
 </ol>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -172,6 +173,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="./../downloads/w7_pap/w7_pap.mp4" type="video/mp4"/></video>
@@ -184,7 +186,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />w6 任務 << <a href='w6 任務.html'>Previous</a> <a href='w7_summary.html'>Next</a> >> w7_summary</div>
+</div>
+<br />w6 任務 << <a href='w6 任務.html'>Previous</a> <a href='w7_summary.html'>Next</a> >> w7_summary</div>
         
     <!-- footer -->
       <div class="container">
