--- a/content/Revealjs.html
+++ b/content/Revealjs.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a><li><a href='AJAX.html'>AJAX</a></li></li></ul></ul><li><a href='Onshape.html'>Onshape</a><li><a href='Coppeliasim.html'>Coppeliasim</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a><li><a href='AJAX.html'>AJAX</a></li></li></ul></ul><li class='has-children'><a href='Applications.html'>Applications</a><ul class='dropdown'><li><a href='Coppeliasim.html'>Coppeliasim</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -159,6 +159,7 @@ img.add_border {
 <p style="padding-left: 30px;">git checkout -f main</p>
 <p><a href="https://github.com/mdecycu/cmsimde">cmsimde</a> 倉儲中的 config/reveal.leo 使用 <a href="https://leoeditor.com/">Leo Editor</a> 編輯各簡報頁面內容. reveal.leo 中包含 demo.html 中的各種簡報應用, 使用者可以從 Leo Editor 專案中取出所需的簡報頁面進行編輯.</p>
 <p>以下影片說明如何利用 Leo Editor 編輯 config/reveal.leo 網際簡報檔案:</p>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -169,6 +170,7 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" muted="true" width="1008">
 <source src="./../downloads/w5_reveal/w5_reveal.mp4" type="video/mp4"/></video>
@@ -183,6 +185,7 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p>以下影片說明如何利用 Leo Editor 編輯 config/pelican.leo 網誌檔案:</p>
+<p>
 <script>
 var winkVideoData2 = {
   dataVersion: 1,
@@ -193,6 +196,7 @@ var winkVideoData2 = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData2" height="630" muted="true" width="1008">
 <source src="./../downloads/w6_blog/w6_blog.mp4" type="video/mp4"/></video>
@@ -205,7 +209,8 @@ var winkVideoData2 = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div><br />Pull requests << <a href='Pull requests.html'>Previous</a> <a href='Meeting.html'>Next</a> >> Meeting</div>
+</div>
+<br />Pull requests << <a href='Pull requests.html'>Previous</a> <a href='Meeting.html'>Next</a> >> Meeting</div>
         
     <!-- footer -->
       <div class="container">
