--- a/content/Spur Gear.html
+++ b/content/Spur Gear.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li><a href='Solvespace.html'>Solvespace</a><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a><li><a href='AJAX.html'>AJAX</a></li></li></ul></ul><li><a href='Onshape.html'>Onshape</a><li><a href='Coppeliasim.html'>Coppeliasim</a><li class='has-children'><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><ul class='dropdown'><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
+                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li class='has-children'><a href='IPv6.html'>IPv6</a><ul class='dropdown'><li><a href='template and SSH.html'>template and SSH</a></li></ul><li class='has-children'><a href='Grouping.html'>Grouping</a><ul class='dropdown'><li><a href='Pull requests.html'>Pull requests</a></li></ul><li><a href='Revealjs.html'>Revealjs</a><li><a href='Meeting.html'>Meeting</a><li><a href='TEX and LaTeX.html'>TEX and LaTeX</a></li></ul><li class='has-children'><a href='Assignments.html'>Assignments</a><ul class='dropdown'><li><a href='各週任務.html'>各週任務</a><li><a href='w6 任務.html'>w6 任務</a><li class='has-children'><a href='w7 任務.html'>w7 任務</a><ul class='dropdown'><li><a href='w7_summary.html'>w7_summary</a></li></ul><li class='has-children'><a href='w8 任務.html'>w8 任務</a><ul class='dropdown'><li><a href='uarm 主體零件.html'>uarm 主體零件</a><li><a href='Spur Gear.html'>Spur Gear</a><li><a href='Block UI Styler.html'>Block UI Styler</a></li></li></ul></ul><li class='has-children'><a href='NX.html'>NX</a><ul class='dropdown'><li><a href='NX3.html'>NX3</a><li class='has-children'><a href='NX12.html'>NX12</a><ul class='dropdown'><li><a href='NX12_API.html'>NX12_API</a></li></ul><li class='has-children'><a href='NX1980.html'>NX1980</a><ul class='dropdown'><li><a href='Start_NX1980.html'>Start_NX1980</a><li><a href='Portable NX1980.html'>Portable NX1980</a><li><a href='NX1980_setup.html'>NX1980_setup</a><li><a href='NXOpen.html'>NXOpen</a><li><a href='UGOpen.html'>UGOpen</a></li></ul><li><a href='NX2008.html'>NX2008</a><li class='has-children'><a href='Research.html'>Research</a><ul class='dropdown'><li><a href='Python API.html'>Python API</a><li><a href='AJAX.html'>AJAX</a></li></li></ul></ul><li class='has-children'><a href='Applications.html'>Applications</a><ul class='dropdown'><li><a href='Coppeliasim.html'>Coppeliasim</a><li><a href='Tic-Tat-Toe.html'>Tic-Tat-Toe</a><li><a href='Threejs.html'>Threejs</a></li></ul><li class='has-children'><a href='run.html'>run</a><ul class='dropdown'><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -158,6 +158,7 @@ gcc.exe -shared -o dist/gear.dll build/gear.o C:\nx12_portable\data\nx12\UGOPEN\
 <p style="padding-left: 30px;"><a href="http://wcm.cycu.org:88/nx3doc/apiprog/index.htm">Open C Programmer's Guide</a> (for internal use only)</p>
 <p style="padding-left: 30px;"><a href="http://wcm.cycu.org:88/nx3doc/ugopen_doc/main.html">Open C Reference Manual</a> (for internal use only)</p>
 <p>以下為 gear.c 編譯連結與執行過程:</p>
+<p>
 <script>
 var winkVideoData_gear_design = {
   dataVersion: 1,
@@ -168,6 +169,7 @@ var winkVideoData_gear_design = {
   },
 };
 </script>
+</p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_gear_design" height="630" muted="true" width="1008">
 <source src="./../downloads/w8_midterm/w9_gear_design.mp4" type="video/mp4"/></video>
@@ -181,7 +183,8 @@ var winkVideoData_gear_design = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
-<p>除了使用上述 NX UGOpen C 的 gear.c 協助正齒輪的設計繪圖外, 也可以利用 NX12 版之後系統自帶的 \UGOPEN\SNAP\examples\More Examples\Gear\Gear.vb.</p><br />uarm 主體零件 << <a href='uarm 主體零件.html'>Previous</a> <a href='Block UI Styler.html'>Next</a> >> Block UI Styler</div>
+<p>除了使用上述 NX UGOpen C 的 gear.c 協助正齒輪的設計繪圖外, 也可以利用 NX12 版之後系統自帶的 \UGOPEN\SNAP\examples\More Examples\Gear\Gear.vb.</p>
+<br />uarm 主體零件 << <a href='uarm 主體零件.html'>Previous</a> <a href='Block UI Styler.html'>Next</a> >> Block UI Styler</div>
         
     <!-- footer -->
       <div class="container">
