--- a/config/content.htm
+++ b/config/content.htm
@@ -269,8 +269,16 @@ var winkVideoData2 = {
 <p><a href="https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf">https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf</a></p>
 <p><a href="http://tug.ctan.org/info/impatient/book.pdf">http://tug.ctan.org/info/impatient/book.pdf</a></p>
 <p><a href="https://texdoc.org/serve/TeXbyTopic.pdf/0">https://texdoc.org/serve/TeXbyTopic.pdf/0</a></p>
-<p></p>
-<h1>Assignments</h1>
+<h3>有關 TeX </h3>
+<p><a href="https://www.overleaf.com/learn/latex/Articles/What%27s_in_a_Name%3A_A_Guide_to_the_Many_Flavours_of_TeX">A Guide to the Many Flavours of TeX</a></p>
+<p style="padding-left: 30px;">解釋何謂 LaTeX, pdfTeX, pdfLaTeX, XeTeX, XeLaTeX, LuaTeX, and LuaLaTeX.</p>
+<p><a href="https://tug.org/tugboat/tb42-1/tb130knuth-tuneup21.pdf">The TeX tuneup of 2021</a></p>
+<p>XeLaTeX means using the LaTeX macro package with the XeTeX engine.</p>
+<p>LuaLaTeX means using the LaTeX macro package with the LuaTeX engine.</p>
+<p style="padding-left: 30px;"><a href="https://www.luatex.org/">https://www.luatex.org</a> </p>
+<p><a href="https://www.tug.org/texlive/">https://www.tug.org/texlive/</a> </p>
+<p><a href="https://miktex.org/">https://miktex.org/</a> </p>
+<p></p><h1>Assignments</h1>
 <p>協同產品設計實習課程學員評分要點:</p>
 <p>sustainable (可持續使用, 永續):</p>
 <p style="padding-left: 30px;">1 : capable of being sustained (可持續)</p>
