--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -269,8 +269,14 @@ var winkVideoData2 = {
 <p><a href="https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf">https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf</a></p>
 <p><a href="http://tug.ctan.org/info/impatient/book.pdf">http://tug.ctan.org/info/impatient/book.pdf</a></p>
 <p><a href="https://texdoc.org/serve/TeXbyTopic.pdf/0">https://texdoc.org/serve/TeXbyTopic.pdf/0</a></p>
-<p></p>
-<h1>Assignments</h1>
+<h3>有關 TeX </h3>
+<p><a href="https://www.overleaf.com/learn/latex/Articles/What%27s_in_a_Name%3A_A_Guide_to_the_Many_Flavours_of_TeX">A Guide to the Many Flavours of TeX</a></p>
+<p style="padding-left: 30px;">解釋何謂 LaTeX, pdfTeX, pdfLaTeX, XeTeX, XeLaTeX, LuaTeX, and LuaLaTeX.</p>
+<p><a href="https://tug.org/tugboat/tb42-1/tb130knuth-tuneup21.pdf">The TeX tuneup of 2021</a></p>
+<p>XeLaTeX means using the LaTeX macro package with the XeTeX engine.</p>
+<p>LuaLaTeX means using the LaTeX macro package with the LuaTeX engine.</p>
+<p style="padding-left: 30px;"><a href="https://www.luatex.org/">https://www.luatex.org</a> </p>
+<p></p><h1>Assignments</h1>
 <p>協同產品設計實習課程學員評分要點:</p>
 <p>sustainable (可持續使用, 永續):</p>
 <p style="padding-left: 30px;">1 : capable of being sustained (可持續)</p>
@@ -570,7 +576,7 @@ var winkVideoData_block_ui_modified_expressions = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_block_ui_modified_expressions" height="400px" muted="true" width="600px">
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_block_ui_modified_expressions" height="600px" muted="true" width="800px">
 <source src="/downloads/nxopen\block_ui\block_ui_modified_expressions.mp4" type="video/mp4"/></video></div>
 <h4>Example codes:</h4>
 <p style="padding-left: 30px;">CreateNode API:</p>
