--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -269,13 +269,15 @@ var winkVideoData2 = {
 <p><a href="https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf">https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf</a></p>
 <p><a href="http://tug.ctan.org/info/impatient/book.pdf">http://tug.ctan.org/info/impatient/book.pdf</a></p>
 <p><a href="https://texdoc.org/serve/TeXbyTopic.pdf/0">https://texdoc.org/serve/TeXbyTopic.pdf/0</a></p>
-<h3>有關 TeX </h3>
+<h3>有關 TeX</h3>
 <p><a href="https://www.overleaf.com/learn/latex/Articles/What%27s_in_a_Name%3A_A_Guide_to_the_Many_Flavours_of_TeX">A Guide to the Many Flavours of TeX</a></p>
 <p style="padding-left: 30px;">解釋何謂 LaTeX, pdfTeX, pdfLaTeX, XeTeX, XeLaTeX, LuaTeX, and LuaLaTeX.</p>
 <p><a href="https://tug.org/tugboat/tb42-1/tb130knuth-tuneup21.pdf">The TeX tuneup of 2021</a></p>
 <p>XeLaTeX means using the LaTeX macro package with the XeTeX engine.</p>
 <p>LuaLaTeX means using the LaTeX macro package with the LuaTeX engine.</p>
 <p style="padding-left: 30px;"><a href="https://www.luatex.org/">https://www.luatex.org</a> </p>
+<p><a href="https://www.tug.org/texlive/">https://www.tug.org/texlive/</a> </p>
+<p><a href="https://miktex.org/">https://miktex.org/</a> </p>
 <p></p><h1>Assignments</h1>
 <p>協同產品設計實習課程學員評分要點:</p>
 <p>sustainable (可持續使用, 永續):</p>
@@ -701,7 +703,7 @@ def OnContextMenuCallback(self, tree, node, columnID):
 <p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=qeDgmwz-xQU">https://www.youtube.com/watch?v=qeDgmwz-xQU</a></p>
 <p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=Qo_A2lJEn0c">https://www.youtube.com/watch?v=Qo_A2lJEn0c</a></p>
 <h2>w10 任務</h2>
-<p>請各組員在下列影片中加入註解說明後, 分別以 w10_block_ui、w10_nx_integ 與 w10_ssh 作為標題, 將說明影片嵌入個人 cd2022 網站頁面及 blog 網誌中.</p>
+<p>請各組員在下列影片中加入註解說明後, 分別以 w10_block_ui、w10_nx_integ 與 w10_ssh 作為標題, 將說明影片嵌入個人 cd2022 網站頁面 (設為 H2 或 H3) 及 blog 網誌中.</p>
 <p>w10_block_ui</p>
 <script>
 var winkVideoData_w10_block_ui = {
@@ -714,7 +716,7 @@ var winkVideoData_w10_block_ui = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="50%" muted="true" width="50%">
 <source src="/downloads/w10_block_ui/w10_block_ui.mp4" type="video/mp4"/></video></div>
 <p>w10_nx_integ</p>
 <script>
@@ -728,7 +730,7 @@ var winkVideoData_w10_nx_integ = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_nx_integ" height="100%" muted="true" width="100%">
+<div class="winkVideoContainerClass" height="80%" style="border: thin solid black; padding: 10px;" width="80%"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_nx_integ" height="80%" muted="true" width="80%">
 <source src="/downloads/w10_nx_integ/w10_nx_integ.mp4" type="video/mp4"/></video></div>
 <p>w10_ssh</p>
 <script>
@@ -742,7 +744,7 @@ var winkVideoData_w10_ssh = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_ssh" height="100%" muted="true" width="100%">
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_ssh" height="50%" muted="true" width="50%">
 <source src="/downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div><h1>NX</h1>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/">https://www.plm.automation.siemens.com/global/en/products/nx/</a></p>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html">https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html</a></p>
