--- a/content/NX.html
+++ b/content/NX.html
@@ -142,12 +142,22 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">run_journal << <a href='run_journal.html'>Previous</a> <a href='NX3.html'>Next</a> >> NX3<br /><h1>NX</h1>
+<p>多重啟動可攜程式與 NX:</p>
+<p>將各 NX 版本的啟動整合至不同的 start.bat 檔案中.</p>
+<p><img alt="" class="add_border" height="315" src="./../images/multiple_nx_startup.png" width="300"/></p>
+<p>設定啟動 NX12 所需的環境變數:</p>
+<p><img caption="false" class="add_border" height="153" src="./../images/nx12_startup_1.png" width="300"/></p>
+<p>設定認證用的伺服主機:</p>
+<p><img alt="" class="add_border" height="20" src="./../images/nx12_startup_2.png" width="300"/></p>
+<p>使用英文介面, 並將啟動 NX 所需的指令搜尋路徑整合到 path:</p>
+<p><img alt="" class="add_border" height="127" src="./../images/nx12_startup_3.png" width="300"/></p>
+<p>啟動 NX 所需的環境變數與指令搜尋路徑設定完成後, 利用 ugraf.exe 開啟 NX:</p>
+<p><img alt="" class="add_border" height="29" src="./../images/nx12_startup_4.png" width="300"/></p>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/">https://www.plm.automation.siemens.com/global/en/products/nx/</a></p>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html">https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Siemens_NX">https://en.wikipedia.org/wiki/Siemens_NX</a></p>
 <p><a href="http://toolnotes.com/home/engineering-graphics/siemens-nx-topics/nx-tutorials-version-1855/">View Commands</a> (<a href="https://www.youtube.com/watch?v=GUaa97tALxE">Video</a>):</p>
-<p style="padding-left: 30px;">Zoom in and out<br/>    (roll mouse wheel)<br/>    MB2<br/>3D Orbit<br/>    (move mouse while holding in middle mouse wheel)<br/>    MB2<br/>Pan<br/>    (move mouse and right click button)<br/>    MB2 + MB3<br/>Twist view<br/>    MB2 + Slide along edges of screen<br/>Align view<br/>    F8</p>
-<br />run_journal << <a href='run_journal.html'>Previous</a> <a href='NX3.html'>Next</a> >> NX3</div>
+<p style="padding-left: 30px;">Zoom in and out<br/>    (roll mouse wheel)<br/>    MB2<br/>3D Orbit<br/>    (move mouse while holding in middle mouse wheel)<br/>    MB2<br/>Pan<br/>    (move mouse and right click button)<br/>    MB2 + MB3<br/>Twist view<br/>    MB2 + Slide along edges of screen<br/>Align view<br/>    F8</p><br />run_journal << <a href='run_journal.html'>Previous</a> <a href='NX3.html'>Next</a> >> NX3</div>
         
     <!-- footer -->
       <div class="container">
