加入 w10 任務一執行步驟提示

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -879,11 +879,11 @@ if __name__ == "__main__":
 <p>設定啟動 NX12 所需的環境變數:</p>
 <p><img caption="false" class="add_border" height="153" src="/images/nx12_startup_1.png" width="300"/></p>
 <p>設定認證用的伺服主機:</p>
-<p><img alt="" height="20" src="/images/nx12_startup_2.png" width="300"/></p>
+<p><img alt="" class="add_border" height="20" src="/images/nx12_startup_2.png" width="300"/></p>
 <p>使用英文介面, 並將啟動 NX 所需的指令搜尋路徑整合到 path:</p>
-<p><img alt="" height="127" src="/images/nx12_startup_3.png" width="300"/></p>
+<p><img alt="" class="add_border" height="127" src="/images/nx12_startup_3.png" width="300"/></p>
 <p>啟動 NX 所需的環境變數與指令搜尋路徑設定完成後, 利用 ugraf.exe 開啟 NX:</p>
-<p><img alt="" height="29" src="/images/nx12_startup_4.png" width="300"/></p>
+<p><img alt="" class="add_border" height="29" src="/images/nx12_startup_4.png" width="300"/></p>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/">https://www.plm.automation.siemens.com/global/en/products/nx/</a></p>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html">https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Siemens_NX">https://en.wikipedia.org/wiki/Siemens_NX</a></p>
