--- a/config/content.htm
+++ b/config/content.htm
@@ -704,6 +704,14 @@ def OnContextMenuCallback(self, tree, node, columnID):
 <p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=Qo_A2lJEn0c">https://www.youtube.com/watch?v=Qo_A2lJEn0c</a></p>
 <h2>w10 任務</h2>
 <p>請各組員在下列影片中加入註解說明後, 分別以 w10_block_ui、w10_nx_integ 與 w10_ssh 作為標題, 將說明影片嵌入個人 cd2022 網站頁面 (設為 H2 或 H3) 及 blog 網誌中.</p>
+<p>w10-1 任務執行步驟:</p>
+<ol>
+<li><a href="https://github.com/mdecycu/cd2022_guide/raw/main/downloads/w10_block_ui/w10_block_ui.wnk">下載 w10_block_ui.wnk</a></li>
+<li>利用 Wink 開啟專案 (Wink 3.0 與 3.01 相容性尚未測試)</li>
+<li>在各頁面加入說明標註</li>
+<li>若有其他附加頁面, 則需縮至 1008x630 後插入適當位置</li>
+<li>完成後轉出對應的 mp4 放入頁面與網誌</li>
+</ol>
 <p>w10_block_ui</p>
 <script>
 var winkVideoData_w10_block_ui = {
@@ -745,8 +753,7 @@ var winkVideoData_w10_ssh = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_ssh" height="100%" muted="true" width="100%">
-<source src="/downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div>
-<h3>run_journal</h3>
+<source src="/downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div><h3>run_journal</h3>
 <p>若以 NXOpen Python API 為例, 可以安排將 AJAX 送進 Server 的設計變數存為檔案, 然後由 run_journal.exe 執行的 Python 程式讀進設計變數後, 驅動 NX12、NX1980 或 NX2008 後將結果透過 URL 傳回前端瀏覽器端.</p>
 <p>run_journal.exe help:</p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">Usage: run_journal [ -pim ] [ -r=&lt;filename&gt;[,lang=&lt;lang&gt;][,format=&lt;format&gt;] ] [ -profile ] [ -allow_redo ] &lt;journal-file&gt; [ -args .... ]
