--- a/content/w10 任務.html
+++ b/content/w10 任務.html
@@ -143,6 +143,14 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Block UI Styler << <a href='Block UI Styler.html'>Previous</a> <a href='run_journal.html'>Next</a> >> run_journal<br /><h1>w10 任務</h1>
 <p>請各組員在下列影片中加入註解說明後, 分別以 w10_block_ui、w10_nx_integ 與 w10_ssh 作為標題, 將說明影片嵌入個人 cd2022 網站頁面 (設為 H2 或 H3) 及 blog 網誌中.</p>
+<p>w10-1 任務執行步驟:</p>
+<ol>
+<li><a href="https://github.com/mdecycu/cd2022_guide/raw/main/downloads/w10_block_ui/w10_block_ui.wnk">下載 w10_block_ui.wnk</a></li>
+<li>利用 Wink 開啟專案 (Wink 3.0 與 3.01 相容性尚未測試)</li>
+<li>在各頁面加入說明標註</li>
+<li>若有其他附加頁面, 則需縮至 1008x630 後插入適當位置</li>
+<li>完成後轉出對應的 mp4 放入頁面與網誌</li>
+</ol>
 <p>w10_block_ui</p>
 <script>
 var winkVideoData_w10_block_ui = {
@@ -184,8 +192,7 @@ var winkVideoData_w10_ssh = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_ssh" height="100%" muted="true" width="100%">
-<source src="./../downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div>
-<br />Block UI Styler << <a href='Block UI Styler.html'>Previous</a> <a href='run_journal.html'>Next</a> >> run_journal</div>
+<source src="./../downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div><br />Block UI Styler << <a href='Block UI Styler.html'>Previous</a> <a href='run_journal.html'>Next</a> >> run_journal</div>
         
     <!-- footer -->
       <div class="container">
