--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -218,6 +218,7 @@ var winkVideoData = {
 <h2>TEX and LaTeX</h2>
 <p>為什麼協同產品設計實習需要採用 TEX 與 LaTeX 輸出技術文件?</p>
 <p><a href="https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml">https://github.com/mdecycu/4072pj1/blob/master/.github/workflows/main.yml</a></p>
+<p><a href="https://dev.to/mrturkmen/latex-with-github-actions-4580">https://dev.to/mrturkmen/latex-with-github-actions-4580</a> </p>
 <p><a href="https://www.reed.edu/cis/help/LaTeX/intro.html">https://www.reed.edu/cis/help/LaTeX/intro.html</a> </p>
 <p><a href="https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf">https://ftp.ntou.edu.tw/ctan/info/gentle/gentle.pdf</a></p>
 <p><a href="http://tug.ctan.org/info/impatient/book.pdf">http://tug.ctan.org/info/impatient/book.pdf</a></p>
@@ -557,6 +558,8 @@ var winkVideoData = {
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
 </div><h3>NXOpen</h3>
+<p><a href="https://docs.plm.automation.siemens.com/tdoc/nx/12/nx_api#uid:xid1162445:index_nxopen_prog_guide">NXOpen Programmer's Guide</a> (NX12)</p>
+<p><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/12/nx_api/custom/en_US/nxopen_python_ref/index.html">NXOpen for Python Reference Guide</a> (NX12)</p>
 <p><a href="/downloads/NXOpen_spur_gear.c">NXOpen_spur_gear.c</a></p>
 <p><a href="https://docs.plm.automation.siemens.com/data_services/resources/nx/1872/nx_api/common/en_US/graphics/fileLibrary/nx/nxopen/NXOpen_Getting_Started.pdf">Get Started with NXOpen.pdf</a> (2019)</p><h3>UGOpen</h3>
 <p>在 NX3 時代, 因為尚未支援採用 Python 編寫 API 延伸程式, 但仍可透過當時的 UGOpen C 編寫為 Python 可呼叫的 pyd 動態連結程式庫, 然後由 Python 程式主導後續的<a href="/downloads/nx3_c_pyd/nx3_c_pyd_integ.pdf">延伸應用</a>.</p>
